Fixed z-index on logo

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,29 +2,6 @@
     --time1: 2s;
 }
 
-.headerSplash {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    /* background-image: linear-gradient(to right, cadetblue 50%, darkseagreen 50%); */
-    background-color: cadetblue;
-    transition: all var(--time1);
-}
-
-.headerCompact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    /* background-image: linear-gradient(to right, darkseagreen 50%, cadetblue 50%); */
-    background-color: darkseagreen;
-    transition: all var(--time1);
-
-}
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -39,26 +16,94 @@ a {
     color: inherit;
 }
 
-#navLogo {
-    max-width: 30rem;
-    margin-top: -7rem;
-    background-color:maroon;
+/* __________ HEADER __________ */
+
+.headerSplash {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    border-bottom: 0px solid black;
+    /* background-image: linear-gradient(to right, cadetblue 50%, darkseagreen 50%); */
+    /* background-color: cadetblue; */
+    transition: all var(--time1);
 }
 
-nav {
+.headerCompact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 5rem;
+    border-bottom: 2px solid black;
+    /* background-image: linear-gradient(to right, darkseagreen 50%, cadetblue 50%); */
+    /* background-color: darkseagreen; */
+    transition: all var(--time1);
+
+}
+
+/* ____________ NAV LOGO __________ */
+
+#navLogoSplash {
+    max-width: 30rem;
+    margin-top: -7rem;
+    /* background-color:maroon; */
+    z-index: 2;
+    transition: all var(--time1);
+}
+
+#navLogoCompact {
+    position: relative;
+    max-width: 8rem;
+    margin-top: -1rem;
+    /* background-color:maroon; */
+    z-index: 2;
+    transition: all var(--time1);
+}
+
+/*  __________ NAV ___________ */
+
+.navSplash {
     display: flex;
     flex-direction: row;
     width: 100;
-    background-color: blueviolet;
+    margin-top: 2rem;
+    transition: all var(--time1);
+    z-index: 1;
+    /* background-color: blueviolet; */
 }
 
-.navButton{
-    margin-top: 2rem;
+.navCompact {
+    display: flex;
+    flex-direction: row;
+    width: 100;
+    margin-top: -3rem;
+    transition: all var(--time1);
+    z-index: 1;
+    /* background-color: blueviolet; */
+}
+
+/* __________ NAV BUTTON __________ */
+
+.navButton {
     font-weight: bold;
     font-size: 1.5rem;
     width: 8.5rem;
-    background-color:steelblue;
-    outline: 1px solid black;
+    /* background-color:steelblue; */
+    /* outline: 1px solid black; */
+}
+
+/* ___________ NAV BUFFER __________ */
+
+.navBufferSplash {
+    width: 0rem;
+    transition: all var(--time1);
+}
+
+.navBufferCompact {
+    width: 9rem;
+    transition: all var(--time1);
 }
 
 /*
@@ -66,7 +111,7 @@ nav {
 
 }
 
-#navABout {
+#navAbout {
 
 }
 
